2010-06-02  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager_editor_plugin.php: fixed, now show the
	description of plugin selected.
	
	* godmode/servers/plugin.php: added the response to ajax for query the
	report description.
	
	Fixes: #3008494

2010-06-02  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php, include/functions.php,
	godmode/reporting/reporting_builder.php,
	godmode/reporting/reporting_builder.item_editor.php: added the code for
	show a new item event_report_group.

2010-06-02  Ramon Novoa  <rnovoa@artica.es>

	* operation/messages/message.php: Small fixes. Fixed bug #3008779.

	* godmode/servers/modificar_server.php: Ask for confirmation before
	  deleting a server.

2010-06-02  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php: Fixed the error
	showed in manage agents into alerts when the agent 
	has not modules for bug 3010359

2010-06-02  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/networkmap.php: Fixed the fullscreen
	icon out of the header for bug: 3004025

2010-06-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	operation/agentes/status_monitor.php
	operation/agentes/group_view.php: Fixed the group
	view table values for bug 3010321 and added the log4x
	type of module to asynchronous exception for bug
	3008759

2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/group_view.php: Fixed the
	dislocated table of groups view for bug
	3010017

2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/status_monitor.php: Fixed the width
	of the combos avoid displace objects.
	For bug: 3008756

2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* godmode/groups/group_list.php: Change the way of 
	get the group incons to function print_group_icon.

2010-06-01  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/alerts/alert_list.list.php,
	godmode/agentes/configurar_agente.php,